# ai-skills-assessor

./: .eslintrc.base.js  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  restart.sh  tsconfig.base.json  validate.sh
apps/voice-engine/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
apps/voice-engine/src/: __init__.py  config.py  main.py
apps/voice-engine/src/adapters/: __init__.py  anthropic_claim_llm_provider.py  anthropic_llm_provider.py  daily_transport.py  in_memory_persistence.py  livekit_transport.py  openai_embedder.py  pgvector_knowledge_base.py  postgres_persistence.py
apps/voice-engine/src/adapters/stt/: __init__.py  factory.py  whisper_stt_service.py
apps/voice-engine/src/api/: __init__.py  routes.py
apps/voice-engine/src/domain/: __init__.py
apps/voice-engine/src/flows/: __init__.py  assessment_pipeline.py  basic_call_bot.py  bot_runner.py  greeting_flow.py  sfia_flow_controller.py  system_prompt_builder.py
apps/voice-engine/src/scripts/: create_framework.py  extract_sfia_attributes.py  ingest_sfia_skills.py
apps/voice-engine/src/testing/: __init__.py  candidate_bot.py  cli.py  mock_flow_driver.py  mock_interview_runner.py  scorer.py
apps/voice-engine/tests/: conftest.py  smoke_test.py  test_anthropic_llm_provider.py  test_assessment_routes.py  test_basic_call_bot.py  test_call_lifecycle_listener.py  test_claim_extractor.py  test_daily_transport.py  test_greeting_flow.py  test_health.py  test_post_call_pipeline.py  test_providers_smoke.py  test_report_generator.py  test_sfia_flow_controller.py  test_stt_factory.py  test_transcript_recorder.py  test_tts_factory.py
apps/voice-engine/tests/domain/: test_assessment_orchestrator.py  test_call_manager.py  test_phone_utils.py
(+154 files in other folders)
