[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-engine"
version = "0.2.0"
description = "AI Skills Assessor — voice engine (FastAPI + Pipecat)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "nanoid>=2.0.0",
]

# Heavy runtime dependencies (Pipecat, Daily, Anthropic, asyncpg, pgvector) are
# split into the `voice` extras so the lean `dev` install used in CI can run
# the Phase 1 scaffold's lint / type / test checks without pulling in audio /
# native deps. Later phases will require `pip install -e .[voice,dev]`.
[project.optional-dependencies]
voice = [
    "pipecat-ai[daily,openai,anthropic,deepgram]>=0.0.47",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "anthropic>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# UP042: phase doc explicitly specifies `class AssessmentStatus(str, Enum)`
# rather than `StrEnum`; staying loyal to the spec.
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
